--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"husky": "^8.0.0"
 	},
 	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-		"*.{json,css,md}": "prettier --write"
+		"*.{js,jsx,ts,tsx}": "eslint",
+		"*.{json,css,md}": "prettier"
 	}
 }
