--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 	"dependencies": {
 		"next": "14.0.1",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"lottie-react": "^2.4.0",
+		"react-colorful": "^5.6.1",
+		"react-icons": "^4.11.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
