--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"lottie-react": "^2.4.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
 		"react-colorful": "^5.6.1",
-		"react-icons": "^4.11.0"
+		"react-icons": "^4.11.0",
+    "@apollo/client": "^3.8.7",
+		"axios": "^1.6.0",
+    "graphql": "^16.8.1",
+    "zustand": "^4.4.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
