--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"typeRoots": [
+      "./types"
+    ]
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
