--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "npx partykit deploy && next start",
 		"lint": "next lint",
 		"lint:fix": "npm run lint -- --fix",
 		"prettier": "npx prettier --config .prettierrc src --check",
