--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
 	"extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
 	"plugins": ["prettier"],
 	"rules": {
-		"prettier/prettier": "error"
+		"prettier/prettier": "error",
+		"react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "off"
 	}
 }
