--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
 		"file-saver": "^2.0.5",
 		"graphql": "^16.8.1",
 		"next": "14.0.1",
-		"notistack": "^3.0.1",
 		"partysocket": "0.0.12",
 		"react": "^18",
 		"react-colorful": "^5.6.1",
 		"react-dom": "^18",
+		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.11.0",
 		"zod": "^3.22.4",
 		"zustand": "^4.4.5"
